# deepgame2

./: README.md  deepseekx.slnx
deepseekx/: FractalAgent.cs  FractalOpponent.cs  MultiAgentFractalCore.cs  Program.cs  SparseActivationModule.cs  UMHT.cs  WebCrawler.cs  WordTokenizer.cs  admin.php  bfgate.cs  c.txt  chesstrainer.cs  code.txt  crawler.cs  csvlogger.cs  deepseekx.csproj  genomics.cs  index.php  regimeclassifier.cs  t.cs  yahoofinance.cs
deepseekx/code/: CombinatorialPathGate.cs.txt  FractalAgent.cs.txt  FractalOpponent.cs.txt  MultiAgentFractalCore.cs.txt  Program.cs.txt  UMHT.cs.txt  chesstrainer.cs.txt
deepseekx_export/: DeeplExport.cs  NativeInterop.cs  deepseekx_export.csproj
deepseekx_native/: CMakeLists.txt  native_api.cpp  native_api.h
fractaltorch/: __init__.py  agent.py  core.py  fractaltorch.vcxproj  fractaltorch.vcxproj.filters  opponent.py  pathgate.py  ramanujan.py  umht.py  utils.py
fractaltorch/examples/: test_umht.py
web/: admin.php  index.php
